Try to renew connector... not fixed yet !

--- a/ged-connector/pom.xml
+++ b/ged-connector/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>fr.simple.ged.connector</groupId>
 	<artifactId>ged-connector</artifactId>
 	<name>Simple Ged Connector</name>
-	<version>1.0.2</version>
+	<version>1.0.2-SNAPSHOT</version>
 
 	<distributionManagement>
 		<repository>
