Split one shot or not plugins in UI

--- a/ged-core/src/main/resources/properties/icons.properties
+++ b/ged-core/src/main/resources/properties/icons.properties
@@ -44,6 +44,10 @@ ico_toolbar_message_on=/images/toolbar_message_on.png
 
 ico_toolbar_plugins=/images/toolbar_plugins.png
 
+ico_getter_plugins=/images/getter_plugin.png
+
+ico_worker_plugins=/images/worker_plugin.png
+
 ico_toolbar_pref=/images/toolbar_pref.png
 
 ico_new_folder=/images/new_folder.png
