--- a/plugins/getters/demo-plugin/pom.xml
+++ b/plugins/getters/demo-plugin/pom.xml
@@ -1,16 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<parent>
 		<artifactId>simple-ged</artifactId>
 		<groupId>fr.simple.ged</groupId>
 		<version>1.0.0</version>
-		<relativePath>../..</relativePath>
+		<relativePath>../../..</relativePath>
 	</parent>
-	
+
 	<groupId>fr.simple.ged.plugin</groupId>
-	<artifactId>demo-plugin</artifactId>
+	<artifactId>demo-getter-plugin</artifactId>
 	<name>Demo Plugin</name>
 	<version>1.1</version>
 
@@ -42,9 +42,9 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 	<repositories>
-		<!-- 
+		<!--
 		<repository>
 			<id>xaviermichel-snapshots</id>
 			<url>https://github.com/xaviermichel/maven-repo/raw/master/snapshots</url>
@@ -55,26 +55,26 @@
 			<url>https://github.com/xaviermichel/maven-repo/raw/master/releases</url>
 		</repository>
 	</repositories>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>fr.simple.ged.connector</groupId>
 			<artifactId>ged-connector</artifactId>
 			<version>1.0.2-SNAPSHOT</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>1.7.2</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>1.0.7</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-core</artifactId>
