--- a/plugins/getters/orange-plugin/pom.xml
+++ b/plugins/getters/orange-plugin/pom.xml
@@ -5,9 +5,9 @@
 		<artifactId>simple-ged</artifactId>
 		<groupId>fr.simple.ged</groupId>
 		<version>1.0.0</version>
-		<relativePath>../..</relativePath>
+		<relativePath>../../..</relativePath>
 	</parent>
-	
+
 	<groupId>fr.simple.ged.plugin</groupId>
 	<artifactId>orange-ged-plugin</artifactId>
 	<name>Orange Plugin</name>
@@ -41,10 +41,10 @@
 			</plugin>
 		</plugins>
 	</build>
-	
-	
+
+
 	<repositories>
-		<!-- 
+		<!--
 		<repository>
 			<id>xaviermichel-snapshots</id>
 			<url>https://github.com/xaviermichel/maven-repo/raw/master/snapshots</url>
@@ -55,7 +55,7 @@
 			<url>https://github.com/xaviermichel/maven-repo/raw/master/releases</url>
 		</repository>
 	</repositories>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>fr.simple.ged.connector</groupId>
@@ -68,19 +68,19 @@
 			<artifactId>httpclient</artifactId>
 			<version>4.0</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>1.7.2</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>1.0.7</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-core</artifactId>
