--- a/plugins/workers/demo-plugin/src/main/resources/ged_plugin_manifest.properties
+++ b/plugins/workers/demo-plugin/src/main/resources/ged_plugin_manifest.properties
@@ -1,12 +1,12 @@
 
 [infos]
-name		= Demo plugin
+name		= Orange plugin
 author      = Xavier MICHEL
 version		= 1.0
-date        = 2012-10-26
-description = Just a plugin example\nCopy the designed file in the selected ged directory.\nJust try me :)
+date        = 2013-01-28
+description = Just a plugin example\nList files in GED directory.\nJust try me :)
 
 [actions]
 main_class  = fr.test.DemoPlugin
-fields		= file_to_copy(Fichier à copier)
+fields		= filter(Filtre)
 
