--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,14 @@
 		</repository>
 	</repositories>
 
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 	<modules>
 		<module>ged-core</module>
@@ -87,8 +95,8 @@
 				</configuration>
 			</plugin>
 			<plugin>
-        			<groupId>org.codehaus.mojo</groupId>
-        			<artifactId>jxr-maven-plugin</artifactId>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>jxr-maven-plugin</artifactId>
       		</plugin>
 		</plugins>
 	</reporting>
