Diff on loading getter/worker

--- a/plugins/workers/demo-plugin/src/main/resources/ged_plugin_manifest.properties
+++ b/plugins/workers/demo-plugin/src/main/resources/ged_plugin_manifest.properties
@@ -1,9 +1,9 @@
 
 [infos]
-name		= Orange plugin
+name		= Demo plugin
 author      = Xavier MICHEL
 version		= 1.0
-date        = 2013-01-28
+date        = 2013-02-25
 description = Just a plugin example\nList files in GED directory.\nJust try me :)
 
 [actions]
