Fix plugin loading error

--- a/ged-core/src/main/resources/properties/strings.properties
+++ b/ged-core/src/main/resources/properties/strings.properties
@@ -61,6 +61,8 @@ desactivate=Désactiver
 
 activate=Activer
 
+run=Lancer
+
 title_prompt=Entrez ici le titre de votre document
 
 description_prompt=Vous pouvez optionnelement ajouter une courte description qui sera attachée à votre document
