Keep working on plugin activation...

--- a/ged-core/src/main/resources/properties/strings.properties
+++ b/ged-core/src/main/resources/properties/strings.properties
@@ -176,6 +176,8 @@ never=jamais
 
 plugin_is_activated=Le plugin a bien été activé, la première récupération va se faire maintenant.
 
+plugin_is_launched=Le plugin a été lancé, l'écran message vous indiquera quand son action sera terminée
+
 # directory edition screen
 
 folder_edition_of=Modification du classeur {0}
