Add logger in DTO

--- a/ged-connector/pom.xml
+++ b/ged-connector/pom.xml
@@ -13,6 +13,27 @@
 	<name>Simple Ged Connector</name>
 	<version>1.0.2-SNAPSHOT</version>
 
+	<dependencies>
+	
+	<dependency>
+		<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.0.7</version>
+		</dependency>
+
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>1.0.7</version>
+		</dependency>
+	</dependencies>
+
 	<distributionManagement>
 		<repository>
 			<id>repo</id>
