Support jar file name

--- a/plugins/workers/demo-plugin/src/main/resources/ged_plugin_manifest.properties
+++ b/plugins/workers/demo-plugin/src/main/resources/ged_plugin_manifest.properties
@@ -1,10 +1,10 @@
 
 [infos]
-name		= Demo plugin
+name		= Demo worker plugin
 author      = Xavier MICHEL
 version		= 1.0
-date        = 2013-02-25
-description = Just a plugin example\nList files in GED directory.\nJust try me :)
+date        = 2013-04-25
+description = Just a worker plugin example\nList files in GED directory.\nJust try me :)
 
 [actions]
 main_class  = fr.test.DemoPlugin
