--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,8 @@
 
 		<module>plugins/getters/demo-plugin</module>
 		<module>plugins/getters/orange-plugin</module>
-
+		<module>plugins/getters/sfr-mobile-plugin</module>
+		
 		<module>plugins/workers/demo-plugin</module>
 	</modules>
 
