--- a/plugins/workers/demo-plugin/pom.xml
+++ b/plugins/workers/demo-plugin/pom.xml
@@ -80,6 +80,12 @@
 			<artifactId>logback-core</artifactId>
 			<version>1.0.7</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
+		</dependency>
 	</dependencies>
 
 </project>
