--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,6 @@ files-to-release
 # logback
 logback.xml
 
-# my personal files ! (is there already on another branch ?)
+# do not release my data !
 *.pdf
 
