--- a/plugins/workers/demo-plugin/pom.xml
+++ b/plugins/workers/demo-plugin/pom.xml
@@ -60,7 +60,7 @@
 		<dependency>
 			<groupId>fr.simple.ged.connector</groupId>
 			<artifactId>ged-connector</artifactId>
-			<version>1.0.2-SNAPSHOT</version>
+			<version>${ged.connector.version}</version>
 		</dependency>
 
 		<dependency>
