--- a/plugins/archetypes/worker-archetype/src/main/resources/archetype-resources/src/main/resources/ged_plugin_manifest.properties
+++ b/plugins/archetypes/worker-archetype/src/main/resources/archetype-resources/src/main/resources/ged_plugin_manifest.properties
@@ -7,6 +7,6 @@ date        = DATE AT FORMAT YYYY-MM-DD
 description = THE PLUGIN DESCRIPTION (A SHORT TEXT), CAN CONTAIN \n.
 
 [actions]
-main_class  = fr.test.DemoPlugin
+main_class  = ${package}.SimplePlugin
 fields		= file_to_copy(File to copy)	;	password*(Some useless password, the star indicate secret data)	;	check1##(Some checkbox, true per default because there is two sharp)	;	check2#(Another checkbox, false here because there is only one sharp)
 
