--- a/plugins/archetypes/worker-archetype/pom.xml
+++ b/plugins/archetypes/worker-archetype/pom.xml
@@ -3,83 +3,53 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<artifactId>simple-ged</artifactId>
 		<groupId>fr.simple.ged</groupId>
+		<artifactId>archetypes</artifactId>
 		<version>1.0.0</version>
-		<relativePath>../../..</relativePath>
+		<relativePath>..</relativePath>
 	</parent>
 
 	<groupId>fr.simple.ged.plugin</groupId>
-	<artifactId>archetype-getter-plugin</artifactId>
-	<name>Archetype for getter plugin</name>
-	<version>1.0</version>
+	<artifactId>archetype-worker-plugin</artifactId>
+	<name>Archetype for worker plugin</name>
+	<version>${ged.archetypes.version}</version>
+	<packaging>maven-archetype</packaging>
+	
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                    <escapeString>£</escapeString>
+                </configuration>
+            </plugin>
+        </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.3</version>
-				<configuration>
-					<descriptorRefs>
-						<descriptorRef>jar-with-dependencies</descriptorRef>
-					</descriptorRefs>
-					<archive>
-						<manifest>
-							<mainClass>fr.test.DemoPlugin</mainClass>
-						</manifest>
-					</archive>
-				</configuration>
-				<executions>
-					<execution>
-						<id>make-assembly</id>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
+        <extensions>
+            <extension>
+                <groupId>org.apache.maven.archetype</groupId>
+                <artifactId>archetype-packaging</artifactId>
+            </extension>
+        </extensions>
 
-	<repositories>
-		<!--
-		<repository>
-			<id>xaviermichel-snapshots</id>
-			<url>https://github.com/xaviermichel/maven-repo/raw/master/snapshots</url>
-		</repository>
-		-->
-		<repository>
-			<id>xaviermichel-releases</id>
-			<url>https://github.com/xaviermichel/maven-repo/raw/master/releases</url>
-		</repository>
-	</repositories>
-
-	<dependencies>
-		<dependency>
-			<groupId>fr.simple.ged.connector</groupId>
-			<artifactId>ged-connector</artifactId>
-			<version>${ged.connector.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>1.7.2</version>
-		</dependency>
-
-		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
-			<version>1.0.7</version>
-		</dependency>
-
-		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-core</artifactId>
-			<version>1.0.7</version>
-		</dependency>
-	</dependencies>
-
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-archetype-plugin</artifactId>
+                    <extensions>true</extensions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+  
 </project>
