--- a/ged-core/src/main/resources/properties/update_message.properties
+++ b/ged-core/src/main/resources/properties/update_message.properties
@@ -36,4 +36,15 @@ update_40_msg= \
 		Vous pouvez retrouver le lien sur <a href="http://www.xaviermichel.info/tips/read/17/Simple-GED-logiciel-open-source-de-gestion-lectronique-de-documents">la page de simple ged</a> \
 	</i>
 	
+update_41_msg= \
+	<h2>Mise à jour vers la version 4.1 effectuée</h2> \
+	<br/> \
+	<i><a href="https://github.com/xaviermichel/simple-ged/issues?milestone=2&page=1&state=closed">Le changelog complet est sur github</a><br/> \
+	Nouveautés : \
+	<ul> \
+		<li>Chargement dynamique de l'arbre</li> \
+		<li>Personnalisation des icônes des répertoires possible</li> \
+	</ul> \
+	<b>Si vous utilisez des plugins, il faut les mettre à jour</b>
+	
 	
