--- a/ged-core/pom.xml
+++ b/ged-core/pom.xml
@@ -215,6 +215,20 @@
 			<version>3.7.2</version>
 		</dependency>
 
+        <!-- Elastic search -->
+
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+            <version>0.90.0.RC2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.1.3</version>
+        </dependency>
+
 
 		<!-- Autres -->
 
