--- a/ged-core/pom.xml
+++ b/ged-core/pom.xml
@@ -220,7 +220,7 @@
         <dependency>
             <groupId>org.elasticsearch</groupId>
             <artifactId>elasticsearch</artifactId>
-            <version>0.90.0.RC2</version>
+            <version>0.90.0</version>
         </dependency>
 
         <dependency>
