Try to add binary file support (doesn't work)
See :
* http://www.elasticsearch.org/guide/reference/mapping/attachment-type/
* https://github.com/elasticsearch/elasticsearch-mapper-attachments
*
https://github.com/scrutmydocs/scrutmydocs/blob/master/src/main/java/org/scrutmydocs/webapp/servlet/UploadServlet.java#L100

--- a/ged-core/src/main/resources/elasticsearch.yml
+++ b/ged-core/src/main/resources/elasticsearch.yml
@@ -44,7 +44,7 @@
 
 # Path to where plugins are installed:
 #
-# path.plugins: /path/to/plugins
+ path.plugins: ./target/es/plugins
 
 
 ################################## Discovery ##################################
