Support du multi fichier dans ES

--- a/ged-core/src/main/resources/mapping/doc-mapping.json
+++ b/ged-core/src/main/resources/mapping/doc-mapping.json
@@ -15,7 +15,7 @@
                 "type" : "date",
                 "format" : "dateOptionalTime"
             },
-            "file" : {
+            "files" : {
                 "type" : "attachment"
             }
         }
