--- a/ged-core/src/main/resources/properties/strings.properties
+++ b/ged-core/src/main/resources/properties/strings.properties
@@ -135,9 +135,11 @@ info_settings=Régler mes préférences
 
 info_about=A propos de
 
-info_plugin_management=Gérer les plugins
+info_plugin_management_getter=Gérer les plugins de récupération
 
-info_messages=Messages
+info_plugin_management_worker=Gérer les plugins de tâche
+
+info_messages=Messages de l'application
 
 
 # add document screen controller
