--- a/ged-update/pom.xml
+++ b/ged-update/pom.xml
@@ -96,6 +96,12 @@
 			<artifactId>tools</artifactId>
 			<version>${fr.xmichel.toolbox.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
 
 	</dependencies>
 
