--- a/ged-core/src/main/resources/properties/update_message.properties
+++ b/ged-core/src/main/resources/properties/update_message.properties
@@ -35,16 +35,30 @@ update_40_msg= \
 		Une mise à jour du plugin orange est nécessaire si vous souhaitez continuer à l'utiliser (la version précédente ne fonctionne plus) \
 		Vous pouvez retrouver le lien sur <a href="http://www.xaviermichel.info/tips/read/17/Simple-GED-logiciel-open-source-de-gestion-lectronique-de-documents">la page de simple ged</a> \
 	</i>
-	
+
+
 update_41_msg= \
 	<h2>Mise à jour vers la version 4.1 effectuée</h2> \
 	<br/> \
-	<i><a href="https://github.com/xaviermichel/simple-ged/issues?milestone=2&page=1&state=closed">Le changelog complet est sur github</a><br/> \
+	<i><a href="https://github.com/xaviermichel/simple-ged/issues?milestone=2&page=1&state=closed">Le changelog complet est sur github</a></i><br/> \
 	Nouveautés : \
 	<ul> \
 		<li>Chargement dynamique de l'arbre</li> \
 		<li>Personnalisation des icônes des répertoires possible</li> \
 	</ul> \
 	<b>Si vous utilisez des plugins, il faut les mettre à jour</b>
-	
-	
+
+
+ update_42_msg= \
+    <h2>Mise à jour vers la version 4.2 effectuée</h2> \
+    <br/> \
+    <i><a href="https://github.com/xaviermichel/simple-ged/issues?milestone=3&page=1&state=closed">Le changelog complet est sur github</a></i><br/> \
+    Nouveautés : \
+    <ul> \
+        <li>Changement du moteur de recherche des documents (elasticsearch)</li> \
+        <li><a href="https://github.com/xaviermichel/simple-ged/wiki/Comment-utiliser-un-proxy-pour-les-mises-%C3%A0-jour">Gestion d'un proxy pour les mises à jour</a></li> \
+        <li><a href="https://sourceforge.net/projects/simpleged/files/plugins/">Nouveau plugin disponible !</a></li> \
+        <li><a href="https://github.com/xaviermichel/simple-ged/issues?labels=bug&milestone=3&page=1&state=closed">Correction de divers bugs</a></li> \
+    </ul>
+
+
