See https://github.com/elasticsearch/elasticsearch-mapper-attachments/issues/34

--- a/ged-core/src/main/resources/properties/update_message.properties
+++ b/ged-core/src/main/resources/properties/update_message.properties
@@ -62,3 +62,9 @@ update_41_msg= \
     </ul>
 
 
+ update_43_msg= \
+    <h2>Mise à jour vers la version 4.3 effectuée</h2> \
+    <br/> \
+    <i><a href="https://github.com/xaviermichel/simple-ged/issues?milestone=4&page=1&state=closed">Le changelog complet est sur github</a></i><br/>
+    
+    
