Get back PluginProperty !
And leave the [new] DTO alone...

--- a/ged-core/src/main/resources/database.properties
+++ b/ged-core/src/main/resources/database.properties
@@ -16,4 +16,4 @@ hibernate.dialect = fr.xmichel.toolbox.hibernate.sqlite.SQLiteDialect
 #hibernate.cache.use_second_level_cache = true
 #hibernate.cache.provider_class = net.sf.ehcache.hibernate.SingletonEhCacheProvider
 #hibernate.id.new_generator_mappings = true
-persistenceUnit.packagesToScan = com.simple.ged.models
+persistenceUnit.packagesToScan = com.simple.ged
