--- a/ged-core/pom.xml
+++ b/ged-core/pom.xml
@@ -23,8 +23,8 @@
 		<ch.qos.logback.version>1.0.7</ch.qos.logback.version>
 		
 		<org.hibernate.core.version>4.2.5.Final</org.hibernate.core.version>
-		<org.hibernate.ejb-persistence.version>1.0.2.GA</org.hibernate.ejb-persistence.version>
-		<org.hibernate.annotation.version>3.5.6-Final</org.hibernate.annotation.version>
+		<!-- <org.hibernate.ejb-persistence.version>1.0.2.GA</org.hibernate.ejb-persistence.version> -->
+		<!-- <org.hibernate.annotation.version>3.5.6-Final</org.hibernate.annotation.version>  -->
         <org.hibernate.hibernate-ehcache.version>4.2.5.Final</org.hibernate.hibernate-ehcache.version>
         <org.hibernate.hibernate-entitymanager.version>4.2.5.Final</org.hibernate.hibernate-entitymanager.version>
 
