--- a/plugins/getters/sfr-mobile-plugin/pom.xml
+++ b/plugins/getters/sfr-mobile-plugin/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>fr.simple.ged.plugin</groupId>
 	<artifactId>sfr-mobile-plugin</artifactId>
 	<name>SFR Mobile Plugin</name>
-	<version>1.0</version>
+	<version>1.1-SNAPSHOT</version>
 
 	<build>
 		<plugins>
