--- a/plugins/getters/sfr-mobile-plugin/src/main/resources/ged_plugin_manifest.properties
+++ b/plugins/getters/sfr-mobile-plugin/src/main/resources/ged_plugin_manifest.properties
@@ -2,7 +2,7 @@
 [infos]
 name		= SFR Mobile
 author      = Xavier MICHEL
-version		= 1.0
+version		= 1.1-SNAPSHOT
 date        = 2013-04-28
 description = Ce plugin sert a télécharger automatiquement la facture de téléphone mobile SFR chaque mois
 
