--- a/ged-core/pom.xml
+++ b/ged-core/pom.xml
@@ -26,7 +26,8 @@
 		<org.hibernate.ejb-persistence.version>1.0.2.GA</org.hibernate.ejb-persistence.version>
 		<org.hibernate.annotation.version>3.5.6-Final</org.hibernate.annotation.version>
 
-        <org.elasticsearch.version>0.90.1</org.elasticsearch.version>
+        <org.elasticsearch.version>0.90.5</org.elasticsearch.version>
+        <org.elasticsearch.elasticsearch-mapper-attachments.version>1.9.0</org.elasticsearch.elasticsearch-mapper-attachments.version>
 
 		<org.xerial.sqlite-jdbc.version>3.7.2</org.xerial.sqlite-jdbc.version>
 		
@@ -273,6 +274,12 @@
             <version>${org.elasticsearch.version}</version>
         </dependency>
 
+		<dependency>
+			<groupId>org.elasticsearch</groupId>
+			<artifactId>elasticsearch-mapper-attachments</artifactId>
+			<version>${org.elasticsearch.elasticsearch-mapper-attachments.version}</version>
+		</dependency>
+		            
 
 		<!-- Autres -->
 
