Fixes #65 and refactor changelog writer

--- a/ged-core/src/main/resources/properties/update_message.properties
+++ b/ged-core/src/main/resources/properties/update_message.properties
@@ -68,3 +68,16 @@ update_41_msg= \
     <i><a href="https://github.com/xaviermichel/simple-ged/issues?milestone=4&page=1&state=closed">Le changelog complet est sur github</a></i><br/>
     
     
+update_44_msg= \
+    <h2>Mise à jour vers la version 4.4 effectuée</h2> \
+    <br/> \
+    <i><a href="https://github.com/xaviermichel/simple-ged/issues?milestone=5&page=1&state=closed">Le changelog complet est sur github</a></i><br/> \
+    Nouveautés : \
+    <ul> \
+        <li>Mise à jour du moteur de recherche des documents (elasticsearch)</li> \
+        <li>Validation automatique de recherche après un temps donné (une seconde)</li> \
+        <li>Mise à jour des bibliothèques et du support pour une maintenance plus facile !</li> \
+    </ul>
+   
+    
+    
