Update for next release

--- a/plugins/getters/sfr-box-plugin/src/main/resources/ged_plugin_manifest.properties
+++ b/plugins/getters/sfr-box-plugin/src/main/resources/ged_plugin_manifest.properties
@@ -2,8 +2,8 @@
 [infos]
 name		= SFR Box
 author      = Xavier MICHEL
-version		= 1.1-SNAPSHOT
-date        = 2013-05-31
+version		= 1.1
+date        = 2013-09-30
 description = Ce plugin sert a télécharger automatiquement la facture de téléphone SFR box chaque mois
 
 [actions]
