--- a/plugins/getters/sfr-mobile-plugin/src/main/resources/ged_plugin_manifest.properties
+++ b/plugins/getters/sfr-mobile-plugin/src/main/resources/ged_plugin_manifest.properties
@@ -2,8 +2,8 @@
 [infos]
 name		= SFR Mobile
 author      = Xavier MICHEL
-version		= 1.1-SNAPSHOT
-date        = 2013-04-28
+version		= 1.1
+date        = 2013-09-30
 description = Ce plugin sert a télécharger automatiquement la facture de téléphone mobile SFR chaque mois
 
 [actions]
